--- a/inizio-fine/ringraziamenti.tex
+++ b/inizio-fine/ringraziamenti.tex
@@ -9,13 +9,7 @@
 \phantomsection
 \pdfbookmark{Ringraziamenti}{ringraziamenti}
 
-\begin{flushright}{
-	\slshape    
-	``Life is really simple, but we insist on making it complicated''} \\ 
-	\medskip
-    --- Confucius
-\end{flushright}
-
+\medskip
 
 \bigskip
 
@@ -26,11 +20,10 @@
 
 \chapter*{Ringraziamenti}
 
-\noindent \textit{Innanzitutto, vorrei esprimere la mia gratitudine al Prof. NomeDelProfessore, relatore della mia tesi, per l'aiuto e il sostegno fornitomi durante la stesura del lavoro.}\\
+\noindent \textit{Ringrazio chiunque.}\\
+\noindent \textit{Del mondo accademico o personale,}\\
+\noindent \textit{ringrazio chiunque.}\\
 
-\noindent \textit{Desidero ringraziare con affetto i miei genitori per il sostegno, il grande aiuto e per essermi stati vicini in ogni momento durante gli anni di studio.}\\
-
-\noindent \textit{Ho desiderio di ringraziare poi i miei amici per tutti i bellissimi anni passati insieme e le mille avventure vissute.}\\
 \bigskip
 
 \noindent\textit{\myLocation, \myTime}
