--- a/tesi-config.tex
+++ b/tesi-config.tex
@@ -7,8 +7,8 @@
 %**************************************************************
 
 % Autore
-\newcommand{\myName}{Riccardo Montagnin}                                    
-\newcommand{\myTitle}{Titolo della tesi}
+\newcommand{\myName}{Rolando Sartorello}                                    
+\newcommand{\myTitle}{Modifiche evolutive e ristrutturazione di una WebApp come studio sull' architettura a microservizi}
 
 % Tipo di tesi                   
 \newcommand{\myDegree}{Tesi di laurea}
@@ -26,16 +26,16 @@
 \newcommand{\profTitle}{Prof.}
 
 % Relatore
-\newcommand{\myProf}{Tullio Vardanega}
+\newcommand{\myProf}{Francesco Ranzato}
 
 % Luogo
 \newcommand{\myLocation}{Padova}
 
 % Anno accademico
-\newcommand{\myAA}{2016-2017}
+\newcommand{\myAA}{2021-2022}
 
 % Data discussione
-\newcommand{\myTime}{Luglio 2017}
+\newcommand{\myTime}{Giugno 2022}
 
 
 %**************************************************************
