--- a/inizio-fine/sommario.tex
+++ b/inizio-fine/sommario.tex
@@ -15,20 +15,12 @@
 
 \chapter*{Sommario}
 
-Il presente documento descrive il lavoro svolto durante il periodo di stage, della durata di circa trecento ore, dal laureando Pinco Pallino presso l'azienda Azienda S.p.A.
-Gli obbiettivi da raggiungere erano molteplici.\\
-In primo luogo era richiesto lo sviluppo di ...
-In secondo luogo era richiesta l'implementazione di un ... 
-Tale framework permette di registrare gli eventi di un controllore programmabile, quali segnali applicati 
-Terzo ed ultimo obbiettivo era l'integrazione ...
-
-%\vfill
-%
-%\selectlanguage{english}
-%\pdfbookmark{Abstract}{Abstract}
-%\chapter*{Abstract}
-%
-%\selectlanguage{italian}
+Il presente documento descrive il lavoro svolto durante il periodo di stage, della durata di circa trecentoventi ore,
+dal laureando presso l'azienda azienda Sync Lab.\\
+Lo scopo di questo stage è stato quello di studiare ed implementare le componenti di back end per sviluppare
+alcune modifiche evolutive sulla web application prototipale \textit{Challenginator}, strutturandola architetturalmente secondo il pattern
+dei microservizi ed integrando funzionalità ausiliarie, per poi integrare le novità anche da lato frontend, avendo sempre
+l'obbiettivo primario di seguire le corrette pratiche architetturali.
 
 \endgroup			
 
