--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -9,21 +9,33 @@
 
 \section{Scopo del documento}
 
+Il presente documento è la relazione finale dell’ attività di tirocinio
+svolta dallo studente a compimento del percorso formativo.
+Lo scopo è quello di spiegare l’attività svolta ed il
+contributo formativo aggiunto derivante dall’esperienza in azienda.
+
+Questo documento è la relazione conclusiva del tirocinio frequentato dallo
+studente in conclusione al piano di studio. \\
+Si cerca qui di spiegare il lavoro svolto mostrandone i risultati, il percorso, 
+e le relative scelte tecnologiche/architetturali, oltre che le competenze
+coinvolte per tale raggiungimento.
+
 %**************************************************************
 \section{L'azienda}
-
-Descrizione dell'azienda.
+Sync Lab è un azienda che realizza prodotti e soluzioni per diversi amibiti come
+sanità, industria, energia, telcomunicazioni, finanza, trasporti e logistica.
+Si è specializzata in campi come GDPR, Big Data, Cloud Computing, IoT, Mobile e Cyber Security.
+Un azienda con una storia di vent' anni e sedi a Napoli, Roma, Padova, Verona, Milano, Como;
+un organico di più di 300 persone, un fatturato di circa 13 milioni di euro e numerose certificazioni
+ISO in campi di qualità, gestione dati, sicurezza, gestione ambientale.
+Tra i suoi più di 150 clienti troviamo alcuni come TIM, Vodafone, Intesa San Paolo, Enel e Trentalia.
 
 %**************************************************************
-\section{L'idea}
+\section{Struttura del testo}
 
-Introduzione all'idea dello stage.
-
-%**************************************************************
-\section{Organizzazione del testo}
-
+{\Huge TODO}
 \begin{description}
-    \item[{\hyperref[cap:processi-metodologie]{Il secondo capitolo}}] descrive ...
+    \item[{\hyperref[cap:processi-metodologie]{Il secondo capitolo}}] descrive ...  
     
     \item[{\hyperref[cap:descrizione-stage]{Il terzo capitolo}}] approfondisce ...
     
@@ -36,6 +48,7 @@ Introduzione all'idea dello stage.
     \item[{\hyperref[cap:conclusioni]{Nel settimo capitolo}}] descrive ...
 \end{description}
 
+\section{Convenzioni tipografiche}
 Riguardo la stesura del testo, relativamente al documento sono state adottate le seguenti convenzioni tipografiche:
 \begin{itemize}
 	\item gli acronimi, le abbreviazioni e i termini ambigui o di uso non comune menzionati vengono definiti nel glossario, situato alla fine del presente documento;
