--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -35,23 +35,25 @@ Tra i suoi più di 150 clienti troviamo alcuni come TIM, Vodafone, Intesa San Pa
 
 {\Huge TODO}
 \begin{description}
-    \item[{\hyperref[cap:processi-metodologie]{Il secondo capitolo}}] descrive ...  
+    \item[{\hyperref[cap:descrizione-stage]{Il secondo capitolo}}] approfondisce ...
     
-    \item[{\hyperref[cap:descrizione-stage]{Il terzo capitolo}}] approfondisce ...
+    \item[{\hyperref[cap:analisi-requisiti]{Il terzo capitolo}}] approfondisce ...
     
-    \item[{\hyperref[cap:analisi-requisiti]{Il quarto capitolo}}] approfondisce ...
+    \item[{\hyperref[cap:progettazione-codifica]{Il quarto capitolo}}] approfondisce ...
     
-    \item[{\hyperref[cap:progettazione-codifica]{Il quinto capitolo}}] approfondisce ...
+    \item[{\hyperref[cap:verifica-validazione]{Il quinto capitolo}}] approfondisce ...
     
-    \item[{\hyperref[cap:verifica-validazione]{Il sesto capitolo}}] approfondisce ...
-    
-    \item[{\hyperref[cap:conclusioni]{Nel settimo capitolo}}] descrive ...
+    \item[{\hyperref[cap:conclusioni]{Nel sesto capitolo}}] descrive ...
 \end{description}
 
 \section{Convenzioni tipografiche}
 Riguardo la stesura del testo, relativamente al documento sono state adottate le seguenti convenzioni tipografiche:
 \begin{itemize}
-	\item gli acronimi, le abbreviazioni e i termini ambigui o di uso non comune menzionati vengono definiti nel glossario, situato alla fine del presente documento;
-	\item per la prima occorrenza dei termini riportati nel glossario viene utilizzata la seguente nomenclatura: \gls{umlg};
-	\item i termini in lingua straniera o facenti parti del gergo tecnico sono evidenziati con il carattere \emph{corsivo}.
+	\item Acronimi, le abbreviazioni e i termini ambigui o di uso non comune menzionati vengono
+        definiti nel glossario, situato alla fine di questo documento;
+    \item La prima occorrenza dei termini riportati nel glossario viene denotata da una $'g'$ in
+        apice alla parola: \gls{umlg};
+	\item Termini in lingua straniera o facenti parti del gergo tecnico sono evidenziati con il
+        carattere \emph{corsivo}.
+	\item  Snippet di codice, nomi di file e simili verranno indicati con il \texttt{carattere monospace};
 \end{itemize}
