--- a/glossario.tex
+++ b/glossario.tex
@@ -26,7 +26,7 @@
 \newglossaryentry{umlg}
 {
     name=\glslink{uml}{UML},
-    text=UML,
+    text=UML$^g$,
     sort=uml,
     description={in ingegneria del software \emph{UML, Unified Modeling Language} (ing. linguaggio di modellazione unificato) è un linguaggio di modellazione e specifica basato sul paradigma object-oriented. L'\emph{UML} svolge un'importantissima funzione di ``lingua franca'' nella comunità della progettazione e programmazione a oggetti. Gran parte della letteratura di settore usa tale linguaggio per descrivere soluzioni analitiche e progettuali in modo sintetico e comprensibile a un vasto pubblico}
 }
