--- a/capitoli/capitolo-2.tex
+++ b/capitoli/capitolo-2.tex
@@ -5,24 +5,15 @@
 %**************************************************************
 \chapter{Descrizione dello stage}
 \label{cap:descrizione-stage}
-%**************************************************************
-
-\intro{Breve introduzione al capitolo}\\
+\intro{
+    In questo capitolo si descrive intanto la natura del percorso di stage,
+    quindi si mostra come è stato decomposto in requisiti ed obbiettivi specifici,
+    e conseguentemente la pianificazione oraria delle tempistiche previste inizialmente per il
+    raggiungimento di essi come indicati dal piano di lavoro.
+}\\
 
 %**************************************************************
 \section{Introduzione al progetto}
-
-%**************************************************************
-\section{Analisi preventiva dei rischi}
-
-Durante la fase di analisi iniziale sono stati individuati alcuni possibili rischi a cui si potrà andare incontro.
-Si è quindi proceduto a elaborare delle possibili soluzioni per far fronte a tali rischi.\\
-
-\begin{risk}{Performance del simulatore hardware}
-    \riskdescription{le performance del simulatore hardware e la comunicazione con questo potrebbero risultare lenti o non abbastanza buoni da causare il fallimento dei test}
-    \risksolution{coinvolgimento del responsabile a capo del progetto relativo il simulatore hardware}
-    \label{risk:hardware-simulator} 
-\end{risk}
 
 %**************************************************************
 \section{Requisiti e obiettivi}
